--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,108 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Admin Login - Football Auctioneer</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      background-color: #f1f5f9; /* Tailwind slate-100 */
+      color: #1e293b; /* Tailwind slate-800 */
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2rem;
+    }
+    @media (min-width: 640px) {
+      body {
+        padding: 4rem;
+      }
+    }
+    input:focus-visible, button:focus-visible {
+      outline: 2px solid #2563EB; /* blue-600 */
+      outline-offset: 2px;
+    }
+    .error {
+      color: #dc2626; /* red-600 */
+      margin-top: 0.5rem;
+      font-size: 0.875rem;
+      min-height: 1.25rem;
+    }
+  </style>
+</head>
+<body>
+  <main class="bg-white rounded-2xl shadow-md p-8 max-w-md w-full">
+    <h1 class="text-3xl font-bold mb-8 text-center">Admin Login</h1>
+    <form id="loginForm" novalidate autocomplete="off" class="space-y-6">
+      <div>
+        <label for="email" class="block font-medium text-slate-700 mb-2">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="jyotishka27@org.com"
+          required
+          class="w-full border border-gray-300 rounded-xl px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600"
+          autocapitalize="none"
+          autocorrect="off"
+          spellcheck="false"
+        />
+      </div>
+      <div>
+        <label for="password" class="block font-medium text-slate-700 mb-2">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Enter password"
+          required
+          class="w-full border border-gray-300 rounded-xl px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600"
+          autocomplete="current-password"
+        />
+      </div>
+      <div id="errorMsg" class="error" role="alert" aria-live="assertive"></div>
+      <button
+        type="submit"
+        class="w-full bg-blue-600 text-white font-semibold py-3 rounded-xl hover:bg-blue-700 transition-colors duration-200"
+      >
+        Login as Admin
+      </button>
+    </form>
+  </main>
+
+  <script>
+    (() => {
+      const loginForm = document.getElementById('loginForm');
+      const errorMsg = document.getElementById('errorMsg');
+      const ADMIN_EMAIL = 'jyotishka27@org.com';
+      const ADMIN_PASSWORD = 'Leavemealoner8@';
+
+      loginForm.addEventListener('submit', (e) => {
+        e.preventDefault();
+        errorMsg.textContent = '';
+
+        const email = loginForm.email.value.trim();
+        const password = loginForm.password.value;
+
+        if (!email || !password) {
+          errorMsg.textContent = 'Please enter both email and password.';
+          return;
+        }
+
+        if (email.toLowerCase() === ADMIN_EMAIL && password === ADMIN_PASSWORD) {
+          // Redirect to the next page on successful login
+          window.location.href = 'football_auctioneer.html';
+        } else {
+          errorMsg.textContent = 'Invalid email or password.';
+        }
+      });
+    })();
+  </script>
+</body>
+</html>
 
