--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
         <p><strong>📍 Venue</strong><br>Turf XL</p>
         <p><strong>⏰ Time</strong><br>9:00 AM – 6:00 PM</p>
         <p><strong>👥 Organizers</strong><br>Debayan, Gourav &amp; Jyotishka</p>
-        <p><strong>👥 Captains</strong><br>Subhojit, Ritam, Monty, Subhamoy, Shubanjan &amp; Akash Jr</p>
+        <p><strong>👥 Teams</strong><br>Thunderbolt, Red Bulls Eleven, Messiah FC, White Panthers, Strawhat Pirates, Amingos FC</p>
+        <p><strong>👥 Captains</strong><br>Subhojit, Ritam, Monty, Subhamoy, Shubanjan, Akash Jr</p>
         <p><strong>⚽ Number of Teams</strong><br>6</p>
       </div>
       <h2 class="text-xl font-semibold mb-4">🏆 Independence Cup 2025 – Tournament Guidelines 🏆</h2>
@@ -173,4 +174,5 @@
   </script>
 </body>
 </html>
+
 
