--- a/admin.html
+++ b/admin.html
@@ -13,14 +13,22 @@
       min-height: 100vh;
       margin: 0;
       padding: 0;
+      line-height: 1.5;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: flex;
+      flex-direction: column;
+    }
+    main {
+      flex-grow: 1;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 2rem;
+      padding: 2rem 1rem;
     }
     @media (min-width: 640px) {
-      body {
-        padding: 4rem;
+      main {
+        padding: 4rem 1rem;
       }
     }
     input:focus-visible, button:focus-visible {
@@ -33,49 +41,188 @@
       font-size: 0.875rem;
       min-height: 1.25rem;
     }
+    /* Header & Navigation styling */
+    header {
+      background-color: white;
+      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 30;
+      padding: 0 1rem;
+    }
+    nav {
+      max-width: 1120px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 4rem;
+    }
+    nav .brand {
+      font-weight: 800;
+      font-size: 1.5rem;
+      color: #111827; /* gray-900 */
+      user-select: none;
+    }
+    nav .nav-links {
+      display: none;
+    }
+    nav .nav-links a {
+      margin-left: 2rem;
+      font-weight: 600;
+      font-size: 0.875rem;
+      color: #475569; /* slate-600 */
+      text-decoration: none;
+      position: relative;
+    }
+    nav .nav-links a:hover,
+    nav .nav-links a:focus-visible {
+      color: #2563EB; /* blue-600 */
+      outline-offset: 2px;
+      outline: 2px solid #2563EB;
+      border-radius: 0.3rem;
+    }
+    nav .nav-links a.active {
+      color: #2563EB;
+      font-weight: 700;
+    }
+    /* Mobile menu button */
+    nav .mobile-menu-button {
+      display: block;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #475569;
+    }
+    /* Mobile menu */
+    #mobile-menu {
+      display: none;
+      background-color: white;
+      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
+      position: absolute;
+      top: 4rem;
+      left: 0;
+      width: 100%;
+      max-width: 100vw;
+      border-top: 1px solid #CBD5E0;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      z-index: 25;
+    }
+    #mobile-menu a {
+      display: block;
+      padding: 0.75rem 1rem;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #475569;
+      text-decoration: none;
+    }
+    #mobile-menu a:hover,
+    #mobile-menu a:focus-visible {
+      background-color: #E0F2FE; /* sky-100 */
+      color: #2563EB;
+      outline-offset: 2px;
+      outline: 2px solid #2563EB;
+    }
+    #mobile-menu a.active {
+      color: #2563EB;
+      font-weight: 700;
+    }
+    @media (min-width: 768px) {
+      nav .nav-links {
+        display: flex;
+        align-items: center;
+      }
+      nav .mobile-menu-button {
+        display: none;
+      }
+      #mobile-menu {
+        display: none !important;
+      }
+    }
   </style>
 </head>
 <body>
-  <main class="bg-white rounded-2xl shadow-md p-8 max-w-md w-full">
-    <h1 class="text-3xl font-bold mb-8 text-center">Admin Login</h1>
-    <form id="loginForm" novalidate autocomplete="off" class="space-y-6">
-      <div>
-        <label for="email" class="block font-medium text-slate-700 mb-2">Email</label>
-        <input
-          type="email"
-          id="email"
-          name="email"
-          placeholder="jyotishka27@org.com"
-          required
-          class="w-full border border-gray-300 rounded-xl px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600"
-          autocapitalize="none"
-          autocorrect="off"
-          spellcheck="false"
-        />
+  <header>
+    <nav aria-label="Primary Navigation">
+      <div class="brand">We Are Eleven</div>
+      <div class="nav-links" id="desktop-nav-links">
+        <a href="index.html" >Home</a>
+        <a href="team_list.html" >Teams</a>
+        <a href="team_fixtures.html" >Fixtures</a>
+        <a href="admin.html" class="active" aria-current="page">Admin</a>
       </div>
-      <div>
-        <label for="password" class="block font-medium text-slate-700 mb-2">Password</label>
-        <input
-          type="password"
-          id="password"
-          name="password"
-          placeholder="Enter password"
-          required
-          class="w-full border border-gray-300 rounded-xl px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600"
-          autocomplete="current-password"
-        />
-      </div>
-      <div id="errorMsg" class="error" role="alert" aria-live="assertive"></div>
-      <button
-        type="submit"
-        class="w-full bg-blue-600 text-white font-semibold py-3 rounded-xl hover:bg-blue-700 transition-colors duration-200"
-      >
-        Login as Admin
+      <button id="mobile-menu-button" class="mobile-menu-button" aria-label="Toggle menu" aria-expanded="false">
+        <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
+          stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+          <path d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
       </button>
-    </form>
+      <div id="mobile-menu" hidden>
+        <a href="index.html">Home</a>
+        <a href="team_list.html">Teams</a>
+        <a href="team_fixtures.html">Fixtures</a>
+        <a href="admin.html" class="active" aria-current="page">Admin</a>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <main class="bg-white rounded-2xl shadow-md p-8 max-w-md w-full">
+      <h1 class="text-3xl font-bold mb-8 text-center">Admin Login</h1>
+      <form id="loginForm" novalidate autocomplete="off" class="space-y-6">
+        <div>
+          <label for="email" class="block font-medium text-slate-700 mb-2">Email</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="jyotishka27@org.com"
+            required
+            class="w-full border border-gray-300 rounded-xl px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600"
+            autocapitalize="none"
+            autocorrect="off"
+            spellcheck="false"
+          />
+        </div>
+        <div>
+          <label for="password" class="block font-medium text-slate-700 mb-2">Password</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Enter password"
+            required
+            class="w-full border border-gray-300 rounded-xl px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600"
+            autocomplete="current-password"
+          />
+        </div>
+        <div id="errorMsg" class="error" role="alert" aria-live="assertive"></div>
+        <button
+          type="submit"
+          class="w-full bg-blue-600 text-white font-semibold py-3 rounded-xl hover:bg-blue-700 transition-colors duration-200"
+        >
+          Login as Admin
+        </button>
+      </form>
+    </main>
   </main>
 
   <script>
+    // Mobile menu toggle
+    const mobileMenuBtn = document.getElementById('mobile-menu-button');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    mobileMenuBtn.addEventListener('click', () => {
+      const expanded = mobileMenuBtn.getAttribute('aria-expanded') === 'true';
+      mobileMenuBtn.setAttribute('aria-expanded', String(!expanded));
+      if (expanded) {
+        mobileMenu.hidden = true;
+      } else {
+        mobileMenu.hidden = false;
+      }
+    });
+
     (() => {
       const loginForm = document.getElementById('loginForm');
       const errorMsg = document.getElementById('errorMsg');
@@ -85,7 +232,6 @@
       loginForm.addEventListener('submit', (e) => {
         e.preventDefault();
         errorMsg.textContent = '';
-
         const email = loginForm.email.value.trim();
         const password = loginForm.password.value;
 
@@ -95,7 +241,6 @@
         }
 
         if (email.toLowerCase() === ADMIN_EMAIL && password === ADMIN_PASSWORD) {
-          // Redirect to the next page on successful login
           window.location.href = 'football_auctioneer.html';
         } else {
           errorMsg.textContent = 'Invalid email or password.';
@@ -105,4 +250,3 @@
   </script>
 </body>
 </html>
-
