--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -16,15 +16,141 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
     }
     @media (min-width: 640px) {
       body {
         padding: 4rem;
       }
     }
+    /* Unified Header & nav styles */
+    nav.max-w-7xl {
+      width: 100%;
+      max-width: 1120px;
+      background-color: white;
+      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 30;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      margin-bottom: 2rem;
+    }
+    .header-inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 4rem;
+    }
+    .brand {
+      font-weight: 800;
+      font-size: 1.5rem;
+      color: #111827; /* gray-900 */
+      user-select: none;
+    }
+    .desktop-nav {
+      display: none;
+      gap: 2rem;
+    }
+    .desktop-nav a {
+      font-weight: 600;
+      font-size: 0.875rem;
+      color: #475569; /* slate-600 */
+      text-decoration: none;
+      position: relative;
+    }
+    .desktop-nav a:hover,
+    .desktop-nav a:focus-visible {
+      color: #2563EB; /* blue-600 */
+      outline-offset: 2px;
+      outline: 2px solid #2563EB;
+      border-radius: 0.3rem;
+    }
+    .desktop-nav a.active {
+      color: #2563EB;
+      font-weight: 700;
+    }
+    .mobile-menu-button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #475569;
+    }
+    #mobile-menu {
+      display: none;
+      background-color: white;
+      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
+      position: absolute;
+      top: 4rem;
+      left: 0;
+      width: 100%;
+      max-width: 100vw;
+      border-top: 1px solid #CBD5E0;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      z-index: 25;
+    }
+    #mobile-menu a {
+      display: block;
+      padding: 0.75rem 1rem;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #475569;
+      text-decoration: none;
+    }
+    #mobile-menu a:hover,
+    #mobile-menu a:focus-visible {
+      background-color: #E0F2FE;
+      color: #2563EB;
+      outline-offset: 2px;
+      outline: 2px solid #2563EB;
+    }
+    #mobile-menu a.active {
+      color: #2563EB;
+      font-weight: 700;
+    }
+    @media (min-width: 768px) {
+      .desktop-nav {
+        display: flex;
+        align-items: center;
+      }
+      .mobile-menu-button {
+        display: none;
+      }
+      #mobile-menu {
+        display: none !important;
+      }
+    }
   </style>
 </head>
 <body>
+  <!-- Unified Header -->
+  <header>
+    <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="header-inner">
+        <div class="brand">We Are Eleven</div>
+        <div class="desktop-nav">
+          <a href="index.html">Home</a>
+          <a href="team_list.html">Teams</a>
+          <a href="team_fixtures.html" class="active" aria-current="page">Fixtures</a>
+          <a href="admin.html">Admin</a>
+        </div>
+        <button id="mobile-menu-button" class="mobile-menu-button" aria-label="Toggle menu" aria-expanded="false">
+          <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
+            stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <path d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+      <div id="mobile-menu" hidden>
+        <a href="index.html">Home</a>
+        <a href="team_list.html">Teams</a>
+        <a href="team_fixtures.html" class="active" aria-current="page">Fixtures</a>
+        <a href="admin.html">Admin</a>
+      </div>
+    </nav>
+  </header>
+
   <main class="bg-white rounded-2xl shadow-md p-8 max-w-lg w-full text-center">
     <h1 class="text-4xl font-bold mb-6">Page Under Maintenance</h1>
     <p class="text-lg mb-4">
@@ -40,5 +166,16 @@
       </p>
     </section>
   </main>
+
+  <script>
+    // Mobile menu toggle
+    const mobileMenuBtn = document.getElementById('mobile-menu-button');
+    const mobileMenu = document.getElementById('mobile-menu');
+    mobileMenuBtn.addEventListener('click', () => {
+      const expanded = mobileMenuBtn.getAttribute('aria-expanded') === 'true';
+      mobileMenuBtn.setAttribute('aria-expanded', String(!expanded));
+      mobileMenu.hidden = expanded;
+    });
+  </script>
 </body>
 </html>
