--- a/index.html
+++ b/index.html
@@ -71,42 +71,139 @@
       outline: 2px solid #2563EB;
       outline-offset: 2px;
     }
+    /* Unified Header styling */
+    nav.max-w-7xl {
+      background-color: white;
+      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 30;
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+    @media (min-width: 640px) {
+      nav.max-w-7xl {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+      }
+    }
+    .header-inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 4rem;
+    }
+    .brand {
+      font-weight: 800;
+      font-size: 1.5rem;
+      color: #111827; /* gray-900 */
+      user-select: none;
+    }
+    .desktop-nav {
+      display: none;
+      gap: 2rem;
+    }
+    .desktop-nav a {
+      font-weight: 600;
+      font-size: 0.875rem;
+      color: #475569; /* slate-600 */
+      text-decoration: none;
+      position: relative;
+    }
+    .desktop-nav a:hover,
+    .desktop-nav a:focus-visible {
+      color: #2563EB; /* blue-600 */
+      outline-offset: 2px;
+      outline: 2px solid #2563EB;
+      border-radius: 0.3rem;
+    }
+    .desktop-nav a.active {
+      color: #2563EB;
+      font-weight: 700;
+    }
+    .mobile-menu-button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #475569;
+    }
+    #mobile-menu {
+      display: none;
+      background-color: white;
+      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
+      position: absolute;
+      top: 4rem;
+      left: 0;
+      width: 100%;
+      max-width: 100vw;
+      border-top: 1px solid #CBD5E0;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      z-index: 25;
+    }
+    #mobile-menu a {
+      display: block;
+      padding: 0.75rem 1rem;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #475569;
+      text-decoration: none;
+    }
+    #mobile-menu a:hover,
+    #mobile-menu a:focus-visible {
+      background-color: #E0F2FE;
+      color: #2563EB;
+      outline-offset: 2px;
+      outline: 2px solid #2563EB;
+    }
+    #mobile-menu a.active {
+      color: #2563EB;
+      font-weight: 700;
+    }
+    @media (min-width: 768px) {
+      .desktop-nav {
+        display: flex;
+        align-items: center;
+      }
+      .mobile-menu-button {
+        display: none;
+      }
+      #mobile-menu {
+        display: none !important;
+      }
+    }
   </style>
 </head>
 <body class="bg-slate-100">
   <!-- Unified Header -->
   <header>
-    <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 bg-white shadow-md">
-      <div class="flex justify-between h-16 items-center">
-        <!-- Brand -->
-        <div class="text-2xl font-extrabold text-gray-900 select-none">
-          We Are Eleven
+    <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="header-inner">
+        <div class="brand">We Are Eleven</div>
+        <div class="desktop-nav">
+          <a href="index.html" class="active" aria-current="page">Home</a>
+          <a href="team_list.html">Teams</a>
+          <a href="team_fixtures.html">Fixtures</a>
+          <a href="admin.html">Admin</a>
+          <a href="about_us.html">About Us</a>
         </div>
-        <!-- Desktop Navigation -->
-        <div class="hidden md:flex space-x-8 text-gray-700 text-sm font-medium">
-          <a href="index.html" class="hover:text-gray-900 focus:outline-none focus:text-gray-900 focus:ring-2 focus:ring-blue-600 rounded">Home</a>
-          <a href="team_list.html" class="hover:text-gray-900 focus:outline-none focus:text-gray-900 focus:ring-2 focus:ring-blue-600 rounded">Teams</a>
-          <a href="team_fixtures.html" class="hover:text-gray-900 focus:outline-none focus:text-gray-900 focus:ring-2 focus:ring-blue-600 rounded">Fixtures</a>
-          <a href="admin.html" class="text-blue-600 font-semibold hover:text-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-600 rounded" aria-current="page">Admin</a>
-        </div>
-        <!-- Mobile menu button -->
-        <div class="md:hidden">
-          <button id="mobile-menu-button" aria-label="Toggle menu" aria-expanded="false" class="text-gray-700 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-600">
-            <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M4 6h16M4 12h16M4 18h16"></path>
-            </svg>
-          </button>
-        </div>
+        <button id="mobile-menu-button" class="mobile-menu-button" aria-label="Toggle menu" aria-expanded="false">
+          <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
+            stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <path d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
       </div>
-      <!-- Mobile Navigation Menu -->
-      <div id="mobile-menu" class="hidden md:hidden pt-2 pb-4 space-y-1 border-t border-gray-200">
-        <a href="index.html" class="block px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-100 rounded">Home</a>
-        <a href="team_list.html" class="block px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-100 rounded">Teams</a>
-        <a href="team_fixtures.html" class="block px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-100 rounded">Fixtures</a>
-        <a href="admin.html" class="block px-3 py-2 text-base font-medium text-blue-600 font-semibold hover:bg-gray-100 rounded" aria-current="page">Admin</a>
+      <div id="mobile-menu" hidden>
+        <a href="index.html" class="active" aria-current="page">Home</a>
+        <a href="team_list.html">Teams</a>
+        <a href="team_fixtures.html">Fixtures</a>
+        <a href="admin.html">Admin</a>
+        <a href="about_us.html">About Us</a>
       </div>
     </nav>
   </header>
+
   <!-- Main layout -->
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10 px-4 md:px-0 py-8">
     <!-- Main content (left 2 cols) -->
