--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -36,6 +36,12 @@
       padding-right: 1rem;
       margin-bottom: 2rem;
     }
+    @media (min-width: 640px) {
+      nav.max-w-7xl {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+      }
+    }
     .header-inner {
       display: flex;
       justify-content: space-between;
@@ -134,6 +140,7 @@
           <a href="team_list.html">Teams</a>
           <a href="team_fixtures.html" class="active" aria-current="page">Fixtures</a>
           <a href="admin.html">Admin</a>
+          <a href="about_us.html">About Us</a>
         </div>
         <button id="mobile-menu-button" class="mobile-menu-button" aria-label="Toggle menu" aria-expanded="false">
           <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
@@ -147,6 +154,7 @@
         <a href="team_list.html">Teams</a>
         <a href="team_fixtures.html" class="active" aria-current="page">Fixtures</a>
         <a href="admin.html">Admin</a>
+        <a href="about_us.html">About Us</a>
       </div>
     </nav>
   </header>
